Refactor tournament logic to skip qualifying phase and implement dynamic bracket sizing